--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -14,7 +14,7 @@ const { motorcycle } = Astro.props;
     <img src={motorcycle.imagen_3} alt="image" />
   </div>
 
-  {
+  <!-- {
     data.detallesMotocicleta.rendimiento.map((rendimiento) => (
       <>
         <hr class="border-gray-700" />
@@ -23,8 +23,8 @@ const { motorcycle } = Astro.props;
         </h1>
       </>
     ))
-  }
-  <video controls>
+  } -->
+  <!-- <video controls>
     <source src={data.detallesMotocicleta.video} type="video/mp4" />
-  </video>
+  </video> -->
 </div>
