--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,6 @@
 interface Props {
   title: string;
 }
-import Header from "../components/common/Header.astro";
 import SubNavs from "../components/SubNavsA";
 const { title } = Astro.props;
 ---
@@ -13,7 +12,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo.jpeg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
@@ -35,7 +34,7 @@ const { title } = Astro.props;
     );
   }
   html {
-    background: #13151a;
+    background: #010101;
     background-size: 224px;
   }
   code {
