--- a/src/pages/tienda.astro
+++ b/src/pages/tienda.astro
@@ -33,7 +33,7 @@ const productos = await response.json();
     <div>
       <div class="my-[20px] lg:pl-8 pl-4">
         <p class="font-medium mb-[10px] text-white">TOP RATED PRODUCTS</p>
-        <div class="h-[2px] w-[20%] rounded-xl bg-red-dark"></div>
+        <div class="h-[2px] w-[20%] rounded-xl bg-primary"></div>
       </div>
       <div>
         {
@@ -56,7 +56,7 @@ const productos = await response.json();
     <div>
       <div class="my-[20px] lg:pl-8 pl-4">
         <p class="font-medium mb-[10px] text-white">SALE PRODUCTS</p>
-        <div class="h-[2px] w-[20%] rounded-xl bg-red-dark"></div>
+        <div class="h-[2px] w-[20%] rounded-xl bg-primary"></div>
       </div>
       {
         productos.map((item, index) => (
