--- a/src/components/ProductCard.astro
+++ b/src/components/ProductCard.astro
@@ -10,9 +10,9 @@ const { image, details, price, id, description } = Astro.props;
   <img src={image} alt="Logo" class="cover w-md" />
 
   <div class="space-y-2 pl-4 lg:pl-0">
-    <div class="details hover:text-red-dark text-xl">{details}</div>
+    <div class="details hover:text-primary text-xl">{details}</div>
     <div class="text-white/50 font-light">{description}</div>
-    <div class="py-2 px-5 text-right bg-red-dark w-fit">
+    <div class="py-2 px-5 text-right bg-primary w-fit">
       ${price}
     </div>
     <div></div>
