--- a/src/components/Overview.astro
+++ b/src/components/Overview.astro
@@ -10,7 +10,7 @@ const coloresList = colores.split(",");
   <div class="space-y-5">
     <h1 class="text-xl font-bold">Un vistazo general</h1>
     <hr class="border-gray-700" />
-    <p class="text-xs">{description}</p>
+    <p class="text-sm font-sans">{description}</p>
     <hr class="border-gray-800" />
   </div>
   <div class="space-y-5">
