--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ interface Props {
   title: string;
 }
 import SubNavs from "../components/SubNavsA";
+import "../styles/main.css";
 const { title } = Astro.props;
 ---
 
@@ -16,7 +17,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
+  <body class="font-orbitron">
     <SubNavs client:visible />
     <slot />
   </body>
@@ -47,6 +48,16 @@ const { title } = Astro.props;
       Bitstream Vera Sans Mono,
       Courier New,
       monospace;
+  }
+  ::-webkit-scrollbar {
+    width: 0.3rem;
+  }
+  ::-webkit-scrollbar-track {
+    background: #010101;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #0543ba;
+    border-radius: 0.5rem;
   }
   /* @media only screen and (max-width: 600px) {
   body {
