--- a/src/pages/producto/[slug].astro
+++ b/src/pages/producto/[slug].astro
@@ -3,27 +3,24 @@ export const prerender = false;
 import Motorcycle from "../../components/Motorcycle.astro";
 import Layout from "../../layouts/Layout.astro";
 
-const { id } = Astro.params;
+const { slug } = Astro.params;
 
 export async function getStaticPaths() {
   const response = await fetch(
-    "https://bluemotorsec.com/wp-json/wp/v2/productos-tienda"
+    "http://bluemotorsec.com/wp-json/wp/v2/motos"
   );
   const products = await response.json();
 
   return products.map((product) => ({
-    params: { id: product.id.toString() },
+    params: { slug: product.slug },
   }));
 }
-const response = await fetch(
-  `https://bluemotorsec.com/wp-json/wp/v2/productos-tienda/${id}`
-);
 
-const producto = await response.json();
+
 ---
 
-<Layout title={`BlueMotors - ${producto.acf.nombre}`}>
+<Layout title="hola">
   <main class="mx-auto max-w-6xl lg:py-20 py-10 lg:px-8">
-    <Motorcycle motorcycle={producto.acf} />
+    <Motorcycle slug={slug} />
   </main>
 </Layout>;
