--- a/src/pages/tienda.astro
+++ b/src/pages/tienda.astro
@@ -8,7 +8,7 @@ import "animate.css";
 import Carousel from "../components/Carousel.astro";
 
 const response = await fetch(
-  "https://bluemotorsec.com/wp-json/wp/v2/productos-tienda"
+  "http://bluemotorsec.com/wp-json/wp/v2/motos?_fields=acf&acf_format=standard"
 );
 const productos = await response.json();
 ---
@@ -44,7 +44,7 @@ const productos = await response.json();
                 price={item.acf.precio}
                 id={item.id}
                 description={item.acf.descripcion}
-                image={item.acf.imagen_principal}
+                image={item.acf.imagen_1}
                 alt={item.modelo}
               />
             );
@@ -65,7 +65,7 @@ const productos = await response.json();
             id={item.id}
             price={item.acf.precio}
             description={item.acf.descripcion}
-            image={item.acf.imagen_principal}
+            image={item.acf.imagen_1}
             alt={item.modelo}
           />
         ))
