--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const productos = await response.json();
 
       <div>
         <button
-          class="bg-primary py-4 px-8 text-white text-center text-[20px] hover:opacity-70"
+          class=" rounded-lg bg-primary py-4 px-8 text-white text-center text-[20px] transition-all duration-700 hover:bg-[#0d143a]"
         >
           <a href="/tienda">Ver Tienda</a>
         </button>
