--- a/src/components/Motorcycle.astro
+++ b/src/components/Motorcycle.astro
@@ -99,7 +99,7 @@ const motorList = motorcycle.caracteristicas_motor.split(",");
       </div>
       <a href="https://www.autozone.com/vin-decoder" target="_blank">
         <button
-          class="bg-primary py-3 hover:opacity-50 rounded-sm uppercase text-xs w-full font-bold"
+          class="rounded-md bg-primary py-3 hover:opacity-50  uppercase text-xs w-full font-bold"
         >
           Ver VIN
         </button>
@@ -118,7 +118,7 @@ const motorList = motorcycle.caracteristicas_motor.split(",");
         </h1>
       </div>
       <div
-        class="flex justify-items-end py-2 flex-col px-5 text-right bg-primary w-fit"
+        class="rounded-md flex justify-items-end py-2 flex-col px-5 text-right bg-primary w-fit"
       >
         <h5 class="text-white/60 lg:text-sm text-xs">Nuestro Precio</h5>
         <h1 class="lg:text-xl font-bold">
