--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,8 @@ const productos = await response.json();
 
       <div>
         <button
-          class="bg-primary rounded-xl py-4 px-8 text-white text-center text-[20px] hover:opacity-70"
+          class="animate_animated animate__fadeInLeft
+          bg-primary rounded-xl py-4 px-8 text-white text-center text-[20px] hover:opacity-70"
         >
           <a href="/tienda">Ver Tienda</a>
         </button>
