--- a/src/components/ProductCard.astro
+++ b/src/components/ProductCard.astro
@@ -1,26 +1,30 @@
 ---
-const { image, details, price, id, description, slug } = Astro.props;
-
+const { image, details, price, id, description, slug, delay} = Astro.props;
+import { motion } from "framer-motion";
 console.log(slug);
+const delayA = delay*0.2; 
 ---
 
-<a
+
+<motion.a
+  client:visible
+  initial={{ opacity: 0, x: -100 }}
+  animate={{ opacity: 1, x: 0 }}
+  transition={{ duration: 0.2, delay: delayA }}
   href={`/producto/${slug}`}
-  class="relative
-    hover:cursor-pointer lg:px-8 py-6 hover:opacity-80 duration-200 ease-in-out font-medium text-gray-200 flex flex-col gap-5"
+  className="relative w-[450px] hover:cursor-pointer lg:px-8 py-6 hover:opacity-80 duration-200 ease-in-out font-medium text-gray-200 flex flex-col gap-5"
 >
-  <img src={image} alt="Logo" class="cover w-md" />
+  <div class="w-[350px] h-[300px] overflow-hidden flex items-center">
+    <img src={image} alt="Logo" class="cover w-md w-[350px]" />
+  </div>
 
   <div class="space-y-5 px-4 lg:px-0">
     <div class="details hover:text-primary text-xl">{details}</div>
     <div class="text-white/50 font-light font-sans">{description}</div>
     <div class="text-white/50 font-light font-sans">{slug}</div>
-    
-    <div class="py-2 rounded-xl px-5 text-right bg-primary w-fit">
-      <span class="text-white font-bold">
-        Contactar
-      </span>
+
+    <div class="py-2 rounded-xl px-5 text-right transition-all hover:bg-blue-900 bg-primary w-fit">
+      <span class="text-white font-bold ">Contactar</span>
     </div>
-    <div></div>
   </div>
-</a>
+</motion.a>
