--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
@@ -50,10 +50,10 @@ const { title } = Astro.props;
       monospace;
   }
   ::-webkit-scrollbar {
-    width: 0.3rem;
+    width: 0.5rem;
   }
   ::-webkit-scrollbar-track {
-    background: #010101;
+    background: #545455;
   }
   ::-webkit-scrollbar-thumb {
     background: #0543ba;
