chore: Update "Contactar" button text to "Mono Baboso"

--- a/src/components/ProductCard.astro
+++ b/src/components/ProductCard.astro
@@ -24,7 +24,7 @@ const delayA = delay*0.2;
     <div class="text-white/50 font-light font-sans">{slug}</div>
 
     <div class="py-2 rounded-xl px-5 text-right transition-all hover:bg-blue-900 bg-primary w-fit">
-      <span class="text-white font-bold ">Contactar</span>
+      <span class="text-white font-bold ">Mono Baboso</span>
     </div>
   </div>
 </motion.a>
